src/BloomBrowserUI/bookEdit/css/editMode.less
/*This stylesheet applied when a book is being edited. It does things like show that images can be changed by click on them.*/
@import "../../bloomUI.less";
@import "../sourceBubbles/sourceBubbles.less";

@bleed: 3mm; // Duplicated from basePage.less to remove circular dependency between BloomBrowserUI and content

@focusBorderColor: rgba(82, 168, 236, 0.6);
@tipLinkColor: #8e3581; // intentionally a bit darker to be legible

// This mixin simply encapsulates the logic of how we add a border on top
// of the edge of an image container instead of adding a regular border
// which modifies the size of the container. See BL-10268.
.borderOnTopOfElement(@color) {
    &:after {
        border: 1px solid @color;
        content: "";
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        position: absolute;
        // this ":after" is actually on top of the whole image, including its description
        // if that is turned on. But we're only interested in putting a border around
        // the image; we don't want to intercept clicks on the image (or its description).
        pointer-events: none;
    }
}

@EditBoxItemsColor: #0000001a;
@MediumGray: #c0b9b9;
@ImageAndVideoHoverOverlay: #d5d5e4;
@ImageButtonBorder: #716666;
@ChangeImageButtonColor: @ControlColor;
@PasteImageButtonColor: @bloom-blue;
/*#0C8597; */
@MetadataButtonColor: #3a7f62; // the only place in .less files that any green is used
@OverflowColor: @WarningColor;
@MainPageBackgroundColor: #f8f8f8;
@PageDragBackgroundColor: #ffffa3;
@PageDragBorderColor: #c1e6ca;
@PageDragInnerItemBorderColor: #787800;

@PageLabelAndChangeLayoutPaneHeight: 45px;
@PageLabelVerticalDisplacement: -33px;

@imageDescriptionTopBorderWidth: 20px;

body {
    background-color: @bloom-darkestBackground;
    /* This works with a transform:scale style added in Javascript to allow zooming just the main page*/
    transform-origin: top left;
    /* This works around a bug in Gecko29 and should be removed when we upgrade. It prevents redraw errors during crtl-wheel zooming*/
    transition: transform 20ms;
}

// See comments on .bloom-mediaBox in basePage.less for a description of the mediaBox.
// Here, we are causing it to be visible when desired.
.bloom-mediaBox {
    pointer-events: none; // we want all clicks to go through this to the child

    & > * {
        pointer-events: auto; // start up clicks again a the next level
    }

    :not(.Device16x9Portrait):not(.Device16x9Landscape)&::before {
        // show bleed area
        content: "";
        position: absolute;
        left: 0;
        right: 0;

        top: 0;
        bottom: 0;
        border: 3mm solid rgba(0, 0, 0, 0.8);
        z-index: 1;
    }

    :not(.Device16x9Portrait):not(.Device16x9Landscape)&:after {
        // show safety area (the area inside of the trim box that still could get cut)
        content: "";
        position: absolute;
        left: @bleed;
        right: @bleed;
        top: @bleed;
        bottom: @bleed;
        border: 3mm solid rgba(0, 0, 0, 0.05);
        z-index: 2;
    }
}

#labelAndLayoutPane {
    height: @PageLabelAndChangeLayoutPaneHeight;
}

.tool-items:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
    font-size: 0;
}

.tool-items {
    display: inline-block;
}

.tool-items {
    /*\*/
    display: block;
    /**/
    -height: 1px;
}

/*+}*/
div.bloom-imageContainer {
    .borderOnTopOfElement(@MediumGray);

    // This shows the focus border on the root (hasOverlay) image container
    // when it has been clicked on to show its editing buttons (:not(.bloom-hideImageButtons)).
    // Currently, something else typically actually has focus and may also show
    // this border. But at least it gives some extra feedback that something happened
    // by clicking the background image.
    &.hasOverlay:not(.bloom-hideImageButtons) {
        .borderOnTopOfElement(@focusBorderColor);
    }
}

// The editing buttons are hidden when this class is added (currently by motion and comic tools)
.bloom-imageContainer.bloom-hideImageButtons,
.bloom-imageContainer.ui-suppressImageButtons {
    > .imageButton,
    > .miniButton {
        display: none;
    }
}

.coverColor div.bloom-imageContainer {
    .borderOnTopOfElement(rgba(1, 1, 1, 0.2));
}

/*....NB: we have 2 rules because some pageLabels may be within the margin box, some outside*/
.marginBox div.pageLabel {
    /*+placement:anchor-top-left -1px -29px;*/
    position: absolute;
    left: -1px;
    top: calc(@PageLabelVerticalDisplacement - 48);
}

[data-derived="originalCopyrightAndLicense"] {
    cite {
        &.missingOriginalTitle,
        &:hover {
            color: red;
            text-decoration: underline red;
            cursor: pointer;
        }
    }
}

.ui-missingCopyrightNotice {
    margin-bottom: 1em;

    a {
        background-color: white;
        border: solid 1px;
        border-radius: 5px;
        border-color: @tipLinkColor;
        padding: 4px;
        font-family: @UIFontStack;
        font-size: 10px;
        font-weight: bold;
        text-decoration: none;
        color: @tipLinkColor;
    }
}

.bloom-page .pageLabel {
    text-align: left;
    color: @ControlColor;
    position: absolute;
    left: 5mm;
    top: @PageLabelVerticalDisplacement;
    float: left;

    &[contenteditable="true"] {
        color: @ControlColor;
        padding: 0 2px;
        display: initial; // must see it to edit it (template pages)
    }

    display: none; // BL-7925
}

.evenPage div.pageLabel {
    margin-left: 2.5cm;
}

.oddPage div.pageLabel {
    margin-left: 1.3cm;
}

div.page {
    background-color: @MainPageBackgroundColor;
    border: medium outset black;
}

div.page.coverColor {
    background-color: @ImageAndVideoHoverOverlay;
    border: medium outset black;
}
/* ... */

